k8s/deploy.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: taitan-boot
  labels:
    app: taitan-boot
  namespace: taitan-bootnfckx
spec:
  selector:
    app: taitan-boot
  ports:
    - name: http # 端口名称
      protocol: TCP # 协议类型
      port: 8989
      targetPort: 8989
  type: ClusterIP # Service类型：ClusterIP(默认)/NodePort/LoaderBalancer
