k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test
  namespace: taitan-bootnfckx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx # 关联的ingress-nginx控制器
  rules:
    - host: boot.taitan.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: taitan-boot
                port:
                  number: 8989
